[gd_scene load_steps=11 format=2]

[ext_resource path="res://art/anemy/grvastone/run1/runone1.png" type="Texture" id=1]
[ext_resource path="res://gravstone.gd" type="Script" id=2]
[ext_resource path="res://sound/hits/zapsplat_impacts_body_hit_baseball_bat_hard_whack_crack_squelchy_bloody_005_44151.wav" type="AudioStream" id=3]
[ext_resource path="res://art/anemy/grvastone/run1/hit.png" type="Texture" id=4]
[ext_resource path="res://hitsound.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.5, 9.07981 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -9.91125 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -15.0, 0.0, 15.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -10 ), Vector2( 0, -13 ), Vector2( 0, -10 ), Vector2( 0, -13 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5.5, 9.67759 )

[node name="gravstone" type="KinematicBody2D"]
z_index = 2
collision_layer = 16384
collision_mask = 28
script = ExtResource( 2 )

[node name="AnimatedSprite" type="Sprite" parent="."]
position = Vector2( 0, -9.91125 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -9.07984 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/hit = SubResource( 6 )
anims/run = SubResource( 4 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 0, -10.2458 )
enabled = true
cast_to = Vector2( 4.99159, 0.0837936 )
collision_mask = 12

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -10.2458 )
enabled = true
cast_to = Vector2( -5.72553, 0.0465851 )
collision_mask = 12

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.5, -9.0102 )
shape = SubResource( 5 )

[node name="stopTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="hitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.476
script = ExtResource( 5 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -9.0102 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="stopTimer" to="." method="_on_stopTimer_timeout"]
